; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_pack.c_php_pack_parse_float.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_pack.c_php_pack_parse_float.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.Copy32 = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32, i8*)* @php_pack_parse_float to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @php_pack_parse_float(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %union.Copy32, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = bitcast %union.Copy32* %5 to i8**
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @memcpy(i8** %6, i8* %7, i32 4)
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %2
  %12 = bitcast %union.Copy32* %5 to i8**
  %13 = load i8*, i8** %12, align 8
  %14 = call i8* @php_pack_reverse_int32(i8* %13)
  %15 = bitcast %union.Copy32* %5 to i8**
  store i8* %14, i8** %15, align 8
  br label %16

16:                                               ; preds = %11, %2
  %17 = bitcast %union.Copy32* %5 to float*
  %18 = load float, float* %17, align 8
  ret float %18
}

declare dso_local i32 @memcpy(i8**, i8*, i32) #1

declare dso_local i8* @php_pack_reverse_int32(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
